continued overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   margin: 0;
   color:white;
-  overflow: auto;
+  overscroll-behavior-y: none;
 }
 
 /*body::webkit-scrollbar-thumb {
